[gd_scene load_steps=38 format=3 uid="uid://cb1qm6o40ti7t"]

[ext_resource type="Script" path="res://microbe.gd" id="1_7ajjv"]
[ext_resource type="Texture2D" uid="uid://box3me3g4pe4r" path="res://art/microbe_skins/OG_1.png" id="2_uu108"]
[ext_resource type="Texture2D" uid="uid://dvm7b8xy3b03s" path="res://art/microbe_skins/OG_10.png" id="3_6fykc"]
[ext_resource type="Texture2D" uid="uid://c0xupw6mqlhok" path="res://art/microbe_skins/OG_11.png" id="4_6nyfo"]
[ext_resource type="Texture2D" uid="uid://bmjkcnvqsus3" path="res://art/microbe_skins/OG_12.png" id="5_c8eue"]
[ext_resource type="Texture2D" uid="uid://87xqygm5vxng" path="res://art/microbe_skins/OG_13.png" id="6_x5o5p"]
[ext_resource type="Texture2D" uid="uid://cof47kpavwnl8" path="res://art/microbe_skins/OG_14.png" id="7_quhwd"]
[ext_resource type="Texture2D" uid="uid://idkqrl7la2lc" path="res://art/microbe_skins/OG_15.png" id="8_lp346"]
[ext_resource type="Texture2D" uid="uid://dggayshdin7n1" path="res://art/microbe_skins/OG_2.png" id="9_3c8il"]
[ext_resource type="Texture2D" uid="uid://dxcljrspju6du" path="res://art/microbe_skins/OG_3.png" id="10_ejgkq"]
[ext_resource type="Texture2D" uid="uid://bn62ugg43upcw" path="res://art/microbe_skins/OG_4.png" id="11_vcuo8"]
[ext_resource type="Texture2D" uid="uid://c36ipeeljtdyj" path="res://art/microbe_skins/OG_5.png" id="12_y33hs"]
[ext_resource type="Texture2D" uid="uid://du442hj3mgumu" path="res://art/microbe_skins/OG_6.png" id="13_gleyy"]
[ext_resource type="Texture2D" uid="uid://ckbylc54vbycc" path="res://art/microbe_skins/OG_7.png" id="14_ww6k5"]
[ext_resource type="Texture2D" uid="uid://bmgfep5gmtxv2" path="res://art/microbe_skins/OG_8.png" id="15_bch03"]
[ext_resource type="Texture2D" uid="uid://bruenot7tae4a" path="res://art/microbe_skins/OG_9.png" id="16_3qe2b"]
[ext_resource type="Texture2D" uid="uid://dlpsblaod8c4m" path="res://art/microbe_skins/OG_0.png" id="17_t3hj5"]
[ext_resource type="Texture2D" uid="uid://bde16cqiseyeu" path="res://art/spike_basic.png" id="19_e78uv"]
[ext_resource type="Texture2D" uid="uid://bqc3tda6v3ad8" path="res://art/body_spikes/bodyspike_1.png" id="19_kgxie"]
[ext_resource type="Texture2D" uid="uid://1svkolybvklc" path="res://art/body_spikes/bodyspike_10.png" id="20_uobey"]
[ext_resource type="Texture2D" uid="uid://dmsg31wffrjal" path="res://art/body_spikes/bodyspike_2.png" id="21_bmxl5"]
[ext_resource type="Texture2D" uid="uid://vp2yw4x7myqa" path="res://art/body_spikes/bodyspike_3.png" id="22_84b28"]
[ext_resource type="Texture2D" uid="uid://cl6i4m3xt202i" path="res://art/body_spikes/bodyspike_4.png" id="23_h3bpo"]
[ext_resource type="Texture2D" uid="uid://ckowxa43i78oi" path="res://art/body_spikes/bodyspike_5.png" id="24_4evtk"]
[ext_resource type="Texture2D" uid="uid://n4r1asw4w1cu" path="res://art/body_spikes/bodyspike_6.png" id="25_quv7l"]
[ext_resource type="Texture2D" uid="uid://bj8ridwfap6lu" path="res://art/body_spikes/bodyspike_7.png" id="26_kwqxk"]
[ext_resource type="Texture2D" uid="uid://lx54iadqbt0t" path="res://art/body_spikes/bodyspike_8.png" id="27_gor1q"]
[ext_resource type="Texture2D" uid="uid://c033sv6colnho" path="res://art/body_spikes/bodyspike_9.png" id="28_m7s51"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jf1qe"]
friction = 0.0
bounce = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_nprx6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_uu108")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6fykc")
}],
"loop": true,
"name": &"10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6nyfo")
}],
"loop": true,
"name": &"11",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_c8eue")
}],
"loop": true,
"name": &"12",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_x5o5p")
}],
"loop": true,
"name": &"13",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_quhwd")
}],
"loop": true,
"name": &"14",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_lp346")
}],
"loop": true,
"name": &"15",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_3c8il")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ejgkq")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_vcuo8")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_y33hs")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_gleyy")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_ww6k5")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_bch03")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_3qe2b")
}],
"loop": true,
"name": &"9",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_t3hj5")
}],
"loop": true,
"name": &"base_0",
"speed": 5.0
}]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mihpe"]
load_path = "res://.godot/imported/mitochondria.png-37bce621f7cbb48327923713f2d37978.ctex"

[sub_resource type="SpriteFrames" id="SpriteFrames_1sipi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_kgxie")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_uobey")
}],
"loop": true,
"name": &"10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_bmxl5")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_84b28")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_h3bpo")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_4evtk")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_quv7l")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_kwqxk")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_gor1q")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_m7s51")
}],
"loop": true,
"name": &"9",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6kwwe"]
resource_local_to_scene = true
radius = 28.0
height = 80.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rad24"]
size = Vector2(4, 4)

[sub_resource type="Gradient" id="Gradient_jje6d"]
interpolation_mode = 2
colors = PackedColorArray(0.423529, 0.772549, 0.137255, 1, 0.176471, 0.341176, 0.117647, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vebmq"]
gradient = SubResource("Gradient_jje6d")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rlq3o"]
lifetime_randomness = 0.9
particle_flag_disable_z = true
particle_flag_damping_as_friction = true
emission_shape = 3
emission_box_extents = Vector3(2.08165e-12, 6, 1)
angle_min = 3.9968e-14
angle_max = 3.9968e-14
spread = 0.0
flatness = 1.0
initial_velocity_min = -10.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
damping_min = 1.0
damping_max = 2.0
scale_min = 2.0
scale_max = 10.0
color_ramp = SubResource("GradientTexture1D_vebmq")
turbulence_noise_strength = 6.0
turbulence_noise_scale = 10.0

[node name="Microbe" type="RigidBody2D"]
process_mode = 1
collision_mask = 61
physics_material_override = SubResource("PhysicsMaterial_jf1qe")
gravity_scale = 2.66454e-15
max_contacts_reported = 1
contact_monitor = true
linear_damp_mode = 1
linear_damp = 2.0
angular_damp_mode = 1
angular_damp = 20.0
script = ExtResource("1_7ajjv")

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="AnimatedSprite2D" parent="Node2D"]
modulate = Color(0, 0, 0, 1)
position = Vector2(2.08165e-12, 2.08165e-12)
rotation = 1.5708
scale = Vector2(0.074, 0.074)
sprite_frames = SubResource("SpriteFrames_nprx6")
animation = &"1"

[node name="Mitochondria" type="Sprite2D" parent="Node2D"]
visible = false
modulate = Color(0, 0, 0, 1)
rotation = 1.5708
scale = Vector2(0.03, 0.03)
texture = SubResource("CompressedTexture2D_mihpe")

[node name="BodySpike" type="AnimatedSprite2D" parent="Node2D"]
visible = false
modulate = Color(0, 0, 0, 1)
rotation = 1.5708
scale = Vector2(0.075, 0.075)
sprite_frames = SubResource("SpriteFrames_1sipi")
animation = &"1"

[node name="Bod" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6kwwe")

[node name="TailNode" type="Node2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
position = Vector2(-39, 0)

[node name="swim_rate" type="Timer" parent="TailNode"]
wait_time = 0.1

[node name="Anchor" type="StaticBody2D" parent="TailNode"]
position = Vector2(2.08165e-12, 2.08165e-12)
collision_layer = 0
collision_mask = 0
constant_linear_velocity = Vector2(10, 2.08165e-12)

[node name="Polygon2D" type="Polygon2D" parent="TailNode/Anchor"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TailNode/Anchor"]
position = Vector2(0, -2.08165e-12)
shape = SubResource("RectangleShape2D_rad24")

[node name="Pin_end" type="PinJoint2D" parent="TailNode"]
node_a = NodePath("../Anchor")
node_b = NodePath("../tail_end")
bias = 0.9

[node name="tail_end" type="RigidBody2D" parent="TailNode"]
position = Vector2(-2, 0)
collision_layer = 2
collision_mask = 49
mass = 0.1
gravity_scale = 2.66454e-15
linear_damp_mode = 1
linear_damp = 5.0

[node name="Polygon2D" type="Polygon2D" parent="TailNode/tail_end"]
position = Vector2(4, 0)
scale = Vector2(1.05263, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-3.80001, -2, -3.80001, 2, -13.3, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TailNode/tail_end"]
position = Vector2(-10, 0)
polygon = PackedVector2Array(10, -2, 10, 2, 0, 2.08165e-12)

[node name="Spike" type="CollisionPolygon2D" parent="."]
visible = false
z_as_relative = false
position = Vector2(40, -2.39095e-11)
rotation = 1.5708
scale = Vector2(1, 1.01199)
polygon = PackedVector2Array(10, 2.96443, -9.99999, 2.9645, -3.25799e-05, -8.89337)
disabled = true

[node name="Spike_sprite" type="Sprite2D" parent="Spike"]
modulate = Color(0, 0, 0, 1)
position = Vector2(1.086e-05, 2.96446)
scale = Vector2(0.05, 0.00988152)
texture = ExtResource("19_e78uv")

[node name="Trail" type="Node2D" parent="."]
visible = false
position = Vector2(-39, 2.08165e-12)

[node name="Trail_Particles" type="GPUParticles2D" parent="Trail"]
z_index = -1
position = Vector2(0, -2.08165e-12)
process_material = SubResource("ParticleProcessMaterial_rlq3o")

[node name="Trail_Line" type="Line2D" parent="Trail"]
z_index = -1
position = Vector2(0, 2.08165e-12)
width = 1.0
default_color = Color(0.32549, 0.0627451, 0.901961, 0.392157)

[node name="Stun" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="TailNode/swim_rate" to="." method="_on_swim_rate_timeout"]
[connection signal="timeout" from="Stun" to="." method="_on_stun_timeout"]
